--- a/public/pages/auth/login.html
+++ b/public/pages/auth/login.html
@@ -44,7 +44,7 @@
                             Zaloguj się
                         </div>
                         <div class="form-options">
-                            Nie masz konta?<a href="/login">Zarejestruj się</a>
+                            Nie masz konta?<a href="/registration">Zarejestruj się</a>
                         </div>
                     </div>
                     
